--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,13 @@
   color: rgb(0, 0, 0) !important;
   font-weight: bold;
 }
+
+.titulo-blanco .dropdown-toggle {
+  color: white !important;
+  font-weight: bold;
+}
+
+.titulo-negro .dropdown-toggle {
+  color: rgb(0, 0, 0) !important;
+  font-weight: bold;
+}
